Add bar graph to show the hours and places when most of murders in the sample appear

--- a/mapsStyle.css
+++ b/mapsStyle.css
@@ -132,3 +132,17 @@ div.tooltip {
 .col-12 {
     width: 100%;
 }
+
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar {
+  fill: steelblue;
+}
+
+.x.axis path {
+  display: none;
+}
